# cuda-course-2025

works/KirpaDmitriy/lab5/: CMakeLists.txt  README.md
works/KirpaDmitriy/lab5/scripts/: 0_download_data.py  1_export_onnx.py  2_build_int8_engine.py
works/KirpaDmitriy/lab5/src/: main.cu
